# fol-equality

./: Cargo.toml  README.md
proptest-regressions/: tests.txt
src/: lib.rs  premise.rs  substitution.rs  term.rs  tests.rs  visitor.rs
