[package]
name = "fol_equality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
proptest = { version = "1.4.0" }

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
missing_errors_doc = "deny"
